--- a/VaadinGuice/ivy.xml
+++ b/VaadinGuice/ivy.xml
@@ -9,11 +9,11 @@
 	<configurations>
 		<!-- The default configuration, which should be deployed to the server -->
 		<conf name="default" />
-		<!-- A configuration only needed when compiling the widget set. Should 
-			not be deployed to the server 
-		<conf name="widgetset-compile" /> -->
-		<!-- A configuration used in compilation of server side classes only.
-			Should be deployed to the server -->
+		<!-- A configuration only needed when compiling the widget set. Should -->
+		<!-- not be deployed to the server -->
+		<conf name="widgetset-compile" />
+		<!-- A configuration used in compilation of server side classes only. Should 
+			be deployed to the server -->
 		<conf name="nodeploy" />
 	</configurations>
 	<dependencies defaultconf="default" defaultconfmapping="default->default">
@@ -23,23 +23,23 @@
 		<!-- Vaadin themes -->
 		<dependency org="com.vaadin" name="vaadin-themes" rev="&vaadin.version;" />
 
-		<!-- Push support 
-		<dependency org="com.vaadin" name="vaadin-push" rev="&vaadin.version;" /> -->
+		<!-- Push support <dependency org="com.vaadin" name="vaadin-push" rev="&vaadin.version;" 
+			/> -->
 
 		<!-- Precompiled DefaultWidgetSet -->
 		<dependency org="com.vaadin" name="vaadin-client-compiled"
 			rev="&vaadin.version;" />
 
-		<!-- Vaadin client side, needed for widget set compilation 
+		<!-- Vaadin client side, needed for widget set compilation -->
 		<dependency org="com.vaadin" name="vaadin-client" rev="&vaadin.version;"
-			 conf="widgetset-compile->default" /> -->
+			conf="widgetset-compile->default" />
 
 		<!-- Compiler for custom widget sets. Should not be deployed -->
-		<!--<dependency org="com.vaadin" name="vaadin-client-compiler" -->
-		<!--	rev="&vaadin.version;" conf="widgetset-compile->default" /> -->
-		
-			<dependency org="org.slf4j" name="slf4j-log4j12" rev="1.2"/>
-			
+		<dependency org="com.vaadin" name="vaadin-client-compiler"
+			rev="&vaadin.version;" conf="widgetset-compile->default" />
+
+		<dependency org="org.slf4j" name="slf4j-log4j12" rev="1.2" />
+
 		<dependency org="org.vaadin.addons" name="v-guice" rev="1.0.1" />
 	</dependencies>
 </ivy-module>
