--- a/VaadinGuice/ivy.xml
+++ b/VaadinGuice/ivy.xml
@@ -11,7 +11,7 @@
 		<conf name="default" />
 		<!-- A configuration only needed when compiling the widget set. Should -->
 		<!-- not be deployed to the server -->
-		<conf name="widgetset-compile" />
+<!-- 		<conf name="widgetset-compile" /> -->
 		<!-- A configuration used in compilation of server side classes only. Should 
 			be deployed to the server -->
 		<conf name="nodeploy" />
@@ -31,12 +31,12 @@
 			rev="&vaadin.version;" />
 
 		<!-- Vaadin client side, needed for widget set compilation -->
-		<dependency org="com.vaadin" name="vaadin-client" rev="&vaadin.version;"
-			conf="widgetset-compile->default" />
+<!-- 		<dependency org="com.vaadin" name="vaadin-client" rev="&vaadin.version;" -->
+<!-- 			conf="widgetset-compile->default" /> -->
 
 		<!-- Compiler for custom widget sets. Should not be deployed -->
-		<dependency org="com.vaadin" name="vaadin-client-compiler"
-			rev="&vaadin.version;" conf="widgetset-compile->default" />
+<!-- 		<dependency org="com.vaadin" name="vaadin-client-compiler" -->
+<!-- 			rev="&vaadin.version;" conf="widgetset-compile->default" /> -->
 
 		<dependency org="org.slf4j" name="slf4j-log4j12" rev="1.2" />
 
